2015-02-09  Zhouyi Zhou   <yizhouzhou@ict.ac.cn>

	* ira-color.c (setup_left_conflict_sizes_p): Simplify
	initialization/assignment of conflict_size.

2015-02-09  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/64978
	* ipa-cp.c (gather_caller_stats): Skip thunks.
	(propagate_constants_topo): Skip aliases.

2015-02-09  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/64761
	* config/sh/sh.c (sh_option_override): Don't change
	-freorder-blocks-and-partition to -freorder-blocks even when
	unwinding is enabled.
	(sh_can_follow_jump): Return false if the followee jump is
	a crossing jump when -freorder-blocks-and-partition is specified.
	* config/sh/sh.md (*jump_compact_crossing): New insn.

2015-02-09  Joern Rennecke  <joern.rennecke@embecosm.com>
	    Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/64761
	* config/sh/sh-protos.h (sh_can_redirect_branch): Don't declare.
	* config/sh/sh.c (TARGET_CAN_FOLLOW_JUMP): Redefine.
	(sh_can_redirect_branch): Rename to ...
	(sh_can_follow_jump): ... this.  Constify argument types.
	* config/sh/sh.h (MD_CAN_REDIRECT_BRANCH): Don't define.
	* doc/tm.texi.in (MD_CAN_REDIRECT_BRANCH): Remove documentation.
	* reorg.c (steal_delay_list_from_target): Use targetm.can_follow_jump.
	* doc/tm.texi: Regenerate.

2015-02-09  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/64981
	* builtins.c (expand_builtin): Call targetm.expand_builtin
	for BUILT_IN_MD builtins regardless of asan_intercepted_p.

2015-02-08  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/61548
	* tree-emutls.c (ipa_lower_emutls): Avoid duplicates in TLS_VARS.

2015-02-08  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/63566 
	* ipa-icf.c (set_local): New function.
	(sem_function::merge): Use it.

2015-02-08  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-devirt.c (odr_types_equivalent_p): Fix formating.
	(add_type_duplicate): Fix comparison of BINFOs.

2015-02-08  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-polymorphic-call.c (ipa_polymorphic_call_context): Avoid ICE
	on getting VOID pointer.
